[package]
name = "seshat"
version = "0.0.1-rc0"
edition = "2021"

[dependencies]
notify = "4"
clap = { version = "3.1.0", features = ["derive"] }
git2 = "0.13"
walkdir = "2"
chrono = "0.4"

# signal handling
# ctrlc = { version = "3.0", features = ["termination"] }

# serde = { version = "1.0", features = ["derive"] }
# toml = "0.5"

# color-eyre = "0.5"
# thiserror = "1.0"
